# ipcraft

./: .editorconfig  .flake8  .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  mypy.ini  pyproject.toml  review.md  tox.ini
.github/instructions/: copilot.instructions.md
docs/: changelog.md  contributing.md  index.md  plan.md
docs/api/: driver.md  generator.md  model.md  parser.md  runtime.md
docs/architecture/: data-model.md  driver.md  overview.md  vendor-validation-plan.md
docs/community/: cli-ux-review.md  fpga-engineer-review.md  import-feature-plan.md  package_ip_tcl_spec.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: bus-library.md  cli.md  fpga-workflow.md  ip-yaml-spec.md  memory-maps.md  templates.md
ipcraft/: __init__.py  cli.py  cli_init.py
ipcraft/driver/: __init__.py  bus.py  loader.py
ipcraft/driver/docs/: ARCHITECTURE.md  USAGE.md
ipcraft/generator/: base_generator.py
ipcraft/generator/hdl/: _protocols.py  (+4 more)
ipcraft/model/: __init__.py  base.py  bus.py  bus_library.py  clock_reset.py  core.py  fileset.py  memory_map.py  port.py  validators.py
ipcraft/parser/: __init__.py
ipcraft/runtime/: __init__.py  register.py
ipcraft/tests/: README.md  README_VHDL_AI_PARSER_TESTS.md  conftest.py  test_package_init.py  test_utils.py  test_vhdl_ai_parser.py
ipcraft/utils/: __init__.py  diagram.py
scripts/: README.md  generate_schema.py  ipcraft.py
tests/supported_buses/: .gitignore  generate_ips.py  test_all.sh
tests/toolchain/: Dockerfile  Makefile  validate_intel.sh  validate_xilinx.tcl
(+48 files in other folders)
