[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipcraft"
version = "0.1.0"
description = "A Python library for IP Core development and VHDL generation"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jinja2",
    "rich",
    "pydantic",
    "pyyaml",
    "click",
    "ipcraft-spec",
    "pyparsing>=3.1.4",
]

[tool.uv.sources]
ipcraft-spec = { path = "ipcraft-spec", editable = true }

[project.scripts]
ipcraft = "ipcraft.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["ipcraft"]

[tool.pytest.ini_options]
norecursedirs = ["ipcraft-spec", "dist", "build", ".venv"]
testpaths = ["ipcraft/tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "black>=24.8.0",
    "flake8>=5.0.4",
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "tox>=4.25.0",
]
